<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    
    <CheckBox
        android:id="@+id/chkMainBoolean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_boolean_value" />

    <EditText
        android:id="@+id/edtMainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_string_value" />
    
    <EditText
        android:id="@+id/edtMainNumeric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_numeric_value"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/edtMainDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_decimal_value"
        android:inputType="numberDecimal" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtMainItem"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/send_item"
                android:gravity="center" />

            <ImageButton
                android:id="@+id/ibtMainSendItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@android:drawable/ic_menu_send" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtMainItems"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_item"
                android:gravity="center" />

            <ImageButton
                android:id="@+id/ibtMainAddItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@android:drawable/ic_input_add" />

            <ImageButton
                android:id="@+id/ibtMainSendItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@android:drawable/ic_menu_send" />
        </LinearLayout>
    </LinearLayout>
